--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "league/html-to-markdown": "^5.1",
         "livewire/livewire": "^3.6",
+        "openai-php/client": "^0.16.1",
         "openai-php/laravel": "^0.16.0",
         "phpoffice/phpspreadsheet": "^5.1",
         "phpoffice/phpword": "^1.4",
