--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
     "private": true,
-    "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
+        "@tailwindcss/forms": "^0.5.7",
+        "alpinejs": "^3.13.3",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.6.4",
+        "laravel-mix": "^6.0.49",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0"
+    },
+    "dependencies": {
+        "@vue/compiler-sfc": "^3.4.0",
+        "vue": "^3.5.22",
+        "vue-loader": "^17.4.0",
+        "vuedraggable": "^4.1.0"
     }
 }
