--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,19 @@
     "require": {
         "php": "^8.2",
         "ankurk91/laravel-eloquent-relationships": "^2.2",
+        "google/apiclient": "^2.0",
         "guzzlehttp/guzzle": "^7.10",
         "irazasyed/telegram-bot-sdk": "^3.15",
         "jfcherng/php-diff": "^6.16",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.34",
         "laravel/sanctum": "^4.2",
+        "laravel/scout": "^10.23",
         "laravel/tinker": "^2.10.1",
         "league/html-to-markdown": "^5.1",
         "livewire/livewire": "^3.6",
         "mariosimao/notion-sdk-php": "^1.14",
+        "matchish/laravel-scout-elasticsearch": "^7.12",
         "openai-php/client": "^0.16.1",
         "openai-php/laravel": "^0.16.0",
         "phpoffice/phpspreadsheet": "^5.1",
